test/tools/router_check/test/config/ClusterHeader.golden.json
[
  {
    "test_name": "Test1",
    "input": {
      ":authority": "some_cluster",
      ":path": "/foo"
    },
    "validate": {"cluster_name": "some_cluster"}
  },
  {
    "test_name": "Test2",
    "input": {
      ":authority": "www.lyft.com",
      ":path": "/bar"
    },
    "validate": {"cluster_name": ""}
  },
  {
    "test_name": "Test3",
    "input": {
      ":authority": "www.lyft.com",
      ":path": "/bar",
      "additional_request_headers": [
        {
	        "field": "some_header",
	        "value": "some_cluster"
        }
      ]
    },
    "validate": {"cluster_name": "some_cluster"}
  }
]
