test/tools/router_check/test/config/ClusterHeader_expected.json
[
    {
      "authority": "some_cluster",
      "path": "/foo",
      "check": {"cluster_name": "some_cluster"}
    },
    {
      "authority": "www.lyft.com",
      "path": "/bar",
      "check": {"cluster_name": "none"}
    },
    {
      "authority": "www.lyft.com",
      "path": "/bar",
      "additional_headers": [
        {
          "name": "some_header",
	  "value": "some_cluster"
	}
      ],
      "check": {"cluster_name": "some_cluster"}
    }
]
